--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -1,28 +1,54 @@
 {% extends 'base.html' %}
 
 {% block main_content %}
-    <div class="row" >
+    <div class="row">
         <h1>Tea Club - Team 6</h1>
     </div>
 
     <div class="row">
-        <div class="col-md-4 col-md-offset-1">
+        <h2>Coffers</h2>
+
+        <h3>{{ tea_coffers }}</h3>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4 col-md-offset-1 panel panel-danger">
             <h2>Members</h2>
 
             <form method="POST" action="/members/add_member">
-                <input name="member_text" id="id_new_member" class="form-control input-lg" placeholder="Enter new member name">
+                <input name="member_text" id="id_new_member" class="form-control input-lg"
+                       placeholder="Enter new member name">
+                {% csrf_token %}
             </form>
+
+            <table id="id_members_table" class="table">
+                {% for member in members %}
+                    <tr>
+                        {{ member.name }}
+                        {{ supply.status }}
+                        <a href="/members/{{ member.id }}/collect">Collect</a>
+                    </tr>
+                {% endfor %}
+            </table>
         </div>
 
-        <div class="col-md-4 col-md-offset-2">
+        <div class="col-md-4 col-md-offset-2 panel panel-danger">
             <h2>Supplies</h2>
 
             <form method="POST" action="/supplies/add_supply">
-                <input name="supply_text" id="id_new_supply" class="form-control input-lg" placeholder="Enter new supply">
+                <input name="supply_text" id="id_new_supply" class="form-control input-lg"
+                       placeholder="Enter new supply">
+                {% csrf_token %}
             </form>
 
             <table id="id_supplies_table" class="table">
-
+                {% for supply in supplies %}
+                    <tr>
+                        {{ supply.name }}
+                        {{ supply.status }}
+                        <a href="/supplies/{{ supply.id }}/purchase">Purchase</a>
+                    </tr>
+                {% endfor %}
             </table>
         </div>
     </div>
