--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="row">
-        <h2>Coffers</h2>
+        <h2 id="coffers_text">Coffers</h2>
 
         <h3>£{{ tea_coffers }}</h3>
     </div>
@@ -59,8 +59,7 @@
                                    href="/supplies/{{ supply.id }}/depleted">Depleted?</a></td>
                         {% else %}
                             <td style="color:red;">Out Of Stock</td>
-                            <td id="id_purchase_{{ supply.id }}"><a
-                                    href="/supplies/{{ supply.id }}/purchase">Purchase</a></td>
+                            <td id="id_purchase_{{ supply.id }}"><a data-toggle="modal" data-target="#purchase_modal" onclick="changeFormAction({{ supply.id }})">Purchase</a></td>
                         {% endif %}
                     </tr>
                 {% endfor %}
@@ -70,7 +69,7 @@
 
     <footer class="footer">
         <div class="container">
-            <button type="button" id="id_start_collection_btn" class="btn" data-toggle="modal" data-target="#collection_modal">Start new collection
+            <button type="button" id="id_start_collection_btn" class="btn" data-toggle="modal" data-target="#collection_modal" style="margin-bottom: 10px;">Start new collection
             </button>
         </div>
     </footer>
@@ -93,6 +92,30 @@
                     </form>
                     <button type="submit" id="id_submit_collection" form="collection_form" value="Submit" class="btn" style="margin-top:2ex;">
                         Submit
+                    </button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div id="purchase_modal" class="modal fade" role="dialog">
+        <div class="modal-sm modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">New Purchase</h4>
+                </div>
+                <div class="modal-body">
+                    <form method="POST" action="" id="purchase_form">
+                        <div class="input-group">
+                            <span class="input-group-addon">£</span>
+                            <input name="purchase_amount" id="id_purchase_amount" class="form-control input-sm"
+                                   placeholder="Enter cost of item">
+                            {% csrf_token %}
+                        </div>
+                    </form>
+                    <button type="submit" id="id_submit_purchase" form="purchase_form" value="Submit" class="btn" style="margin-top:2ex;">
+                        Purchase
                     </button>
                 </div>
             </div>
