Working on issue with functional tests still

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -8,7 +8,7 @@
     <div class="row">
         <h2 id="coffers_text">Coffers</h2>
 
-        <h3>£{{ tea_coffers }}</h3>
+        <h3 id="coffers_amount">£{{ tea_coffers }}</h3>
     </div>
 
     <div class="row">
